12-authorization/auth_policy_deny.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: httpbin-auth-deny-policy
  namespace: default
spec:
  action: DENY
  rules:
    - to:
        - operation:
            paths: ["/delay"]
